[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dsa_kuuking"
version = "0.2.0"
description = "A personal DSA library with CRUD implementations for lists, queues, heaps, stacks, and trees."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Sergei Ivanov" }
]

license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.maturin]
# Tell maturin where Python code lives
python-source = "src"
# Tell maturin which Rust manifest to use
manifest-path = "rust_queue/Cargo.toml"
# This makes the Rust module appear INSIDE dsa_kuuking
module-name = "dsa_kuuking.burmese_native"
